syntax = "proto3";
// Contains enums used as part of chart.proto
package webrtc.analytics;

message ChartStyle {
  enum Type {
    UNDEFINED = 0;
    LINE_CHART = 1;
    BAR_CHART = 2;
    LINE_STEP_CHART = 3;
    SCATTER_CHART = 4;
  };
};

message ChartId {
  enum Id {
    kNone = 0;
    kIncomingPacketSizes = 1;
    kOutgoingPacketSizes = 2;
    kIncomingRtcpTypes = 3;
    kOutgoingRtcpTypes = 4;
    kAccumulatedIncomingPackets = 5;
    kAccumulatedOutgoingPackets = 6;
    kAudioPlayout = 7;
    kIncomingAudioLevel = 8;
    kOutgoingAudioLevel = 9;
    kIncomingSequenceNumberDeltas = 10;
    kIncomingNetworkDelay = 11;
    kOutgoingPacketLoss = 12;
    kTotalIncomingBitrate = 13;
    kTotalOutgoingBitrate = 14;
    kIncomingStreamBitrate = 15;
    kOutgoingStreamBitrate = 16;
    kIncomingBitrateAllocation = 17;
    kOutgoingBitrateAllocation = 18;
    kGoogCcBweSimulation = 19;
    kSendSideBweSimulation = 20;
    kReceiveSideBweSimulation = 21;
    kOutgoingNetworkDelay = 22;
    kCaptureToSendDelay = 23;
    kIncomingTimestamps = 24;
    kOutgoingTimestamps = 25;
    kIncomingRtcpFractionLost = 26;
    kOutgoingRtcpFractionLost = 27;
    kIncomingRtcpCumulativeLost = 28;
    kOutgoingRtcpCumulativeLost = 29;
    kIncomingRtcpHighestSeqNumber = 30;
    kOutgoingRtcpHighestSeqNumber = 31;
    kIncomingRtcpDelaySinceLastSr = 32;
    kOutgoingRtcpDelaySinceLastSr = 33;
    kAudioEncoderTargetBitrate = 34;
    kAudioEncoderFrameLength = 35;
    kAudioEncoderLostPackets = 36;
    kAudioEncoderFec = 37;
    kAudioEncoderDtx = 38;
    kAudioEncoderNumChannels = 39;
    kNetEqTiming = 40;
    kNetEqExpandRate = 41;
    kNetEqSpeechExpandRate = 42;
    kNetEqAccelerateRate = 43;
    kNetEqPreemptiveRate = 44;
    kNetEqPacketLossRate = 45;
    kNetEqConcealmentEvents = 46;
    kNetEqPreferredBufferSize = 47;
    kIcePairConfigs = 48;
    kIceConnectivityChecks = 49;
    kDtlsTransportState = 50;
    kDtlsWritableState = 51;
  };
};
