syntax = "proto2";
option optimize_for = LITE_RUNTIME;
package webrtc.video_codec_tester;

message EncodingSettings {
  message EncodeSettings {
    optional boolean frame_drop = 3;
  }

  message StreamSettings {
    optional string codec_name = 1;
    optional string scalability_mode = 2;

    message LayerSettings {
      optional int32 width = 1;
      optional int32 height = 2;
      optional float framerate_fps = 3;
      optional int32 bitrate_kbps = 4;
    }

    repeated LayerSettings layers = 3;
  }

  repeated StreamSettings streams = 1;
}

message FrameSettings {
  // Map of frame RTP timestamp to encoding settings.
  repeated EncodingSettings encoding_settings;
}